# My-own-HTTP-server

./: .gitignore  AGENTS.md  Procfile  README.md  auth_store.py  config.py  dynamic_mock_dispatch.py  event_hub.py  metrics.py  metrics_store.py  plan.md  playground_api.py  playground_store.py  pyproject.toml  request.py  requirements-dev.txt  response.py  router.py  scenario_api.py  scenario_engine.py  scenario_store.py  server.py  session_store.py  socket_handler.py  target_store.py  thread_pool.py  utils.py  your_program.sh
data/: auth_users.example.json
docs/: api-examples.md  demo-runbook.md
handlers/: __init__.py  example_handlers.py
openapi/: openapi.json
scripts/: autocommit_phase.sh  start_server.sh
static/: dashboard.html  playground-minimal.css  playground-minimal.html  playground.css  playground.html  playground.js  test.html
tests/: test_autocommit_phase_script.py  test_codecrafters_compat.py  test_event_hub.py  test_integration.py  test_phase00_scaffold.py  test_phase01_tcp_server.py  test_phase04_home_route.py  test_phase07_post_submit.py  test_playground_store.py  test_request.py  test_response.py  test_router.py  test_scenario_engine.py  test_scenario_runner.py  test_start_server_script.py  test_static_handler.py  test_v20_keepalive.py  test_v21_thread_pool.py  test_v22_chunked_request.py  test_v23_chunked_response.py  test_v24_protocol_headers.py  test_v25_head_and_methods.py  test_v26_metrics.py  test_v27_protocol_regression.py  test_v2_docs.py  test_v30_static_cache_validators.py  test_v31_loadgen.py  test_v32_dashboard.py  test_v40_tls.py  (+14 more)
(+6 files in other folders)
