[project]
name = "custom-http-server"
version = "0.1.0"
description = "Educational HTTP/1.1 server built from raw sockets"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Rahuchpred" }]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
